Correct functionality & readability issues.

--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -1,7 +1,9 @@
 {% if desk_two_blends %}
-    <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_2';">
-        Clear Entered Blends
-    </button>
+    <div class="buttonContainer">    
+        <button type="button" class="btn btn-outline-danger deleteBtn" onclick="window.location.href='http://192.168.178.169:1337/core/clear-entered-blends/?blend-area=Desk_2';">
+            Clear Entered Blends
+        </button>
+    </div>
     <div class="table-responsive-sm">
         <table class="table text-left table-bordered">
             <thead class="thead-dark">
