--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -109,7 +109,7 @@
                         <button class="btn btn-secondary lotNumButton" 
                             data-bs-toggle="modal" data-bs-target="#addLotNumModal" 
                             data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" 
-                            data-threewkqty="{{ item.total_shortage }}" data-line="Prod" data-desk="Desk_1">
+                            data-totalqty="{{ item.total_shortage }}" data-line="Prod" data-desk="Desk_1">
                             +
                         </button>
                     </td>
