--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -33,6 +33,7 @@
         <li><a class="dropdown-item" href="/core/lookup-location/">Chemical Location</a></li>
         <li><a class="dropdown-item" href="/core/lookup-lot-numbers/">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/component-shortages">Component Shortages</a></li>
     </ul>
 </li>
 <li class="nav-item">
