--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -13,6 +13,7 @@
         <li><a class="dropdown-item" href="/core/lookup-location/">Chemical Location</a></li>
         <li><a class="dropdown-item" href="/core/lookup-lot-numbers/">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/prodverse/spec-sheet-lookup/">Spec Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/component-shortages">Component Shortages</a></li>
     </ul>
 </li>
 <li class="nav-item">
@@ -26,12 +27,11 @@
         Blend Auditing
     </a>
     <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
-        <li><a class="dropdown-item" href="/core/component-shortages">ALL Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Blend Count Sheets</a></li>
-        <li><a class="dropdown-item" href="/core/upcoming-component-counts">Component Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/upcoming-component-counts">Blend Component Count Sheets</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
