--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -12,7 +12,7 @@
             <div class='headercontainer'>
                 <div>DATE: </div>
                 <div class="widener">
-                    <div class='centerer'>{{ issue_date }}</div>
+                    <div class='centerer'>{{ date_today }}</div>
                 </div>
             </div>
             <div class='headercontainer'>
@@ -24,7 +24,7 @@
             <div class='headercontainer'>
                 <div>PRODUCT: </div>
                 <div class="widener">
-                    <div>&emsp;{{ item.component_item_code }}&emsp;&emsp;&emsp;&emsp;{{ item.component_item_description }}</div>
+                    <div>&emsp;{{ issue_sheet.component_issue_sheet_code }}&emsp;&emsp;&emsp;&emsp;{{ issue_sheet.component_issue_sheet_description }}</div>
                 </div>
             </div>
         </div>
@@ -37,8 +37,8 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-1'></div>
-                        <div class='centerer widener' id='lot-qty-1'></div>
+                        <div>{{ issue_sheet.batchnum1 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty1 }}</div>
                     </div>
                 </div>
 
@@ -48,8 +48,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-2'></div>
-                        <div class='centerer widener' id='lot-qty-2'></div>
+                        <div>{{ issue_sheet.batchnum2 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty2 }}</div>
                     </div>
                 </div>
                 
@@ -59,8 +59,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-3'></div>
-                        <div class='centerer widener' id='lot-qty-3'></div>
+                        <div>{{ issue_sheet.batchnum3 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty3 }}</div>
                     </div>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-4'></div>
-                        <div class='centerer widener' id='lot-qty-4'></div>
+                        <div>{{ issue_sheet.batchnum4 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty4 }}</div>
                     </div>
                 </div>
 
@@ -90,8 +90,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-5'></div>
-                        <div class='centerer widener' id='lot-qty-5'></div>
+                        <div>{{ issue_sheet.batchnum5 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty5 }}</div>
                     </div>
                 </div>
                 
@@ -101,8 +101,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-6'></div>
-                        <div class='centerer widener' id='lot-qty-6'></div>
+                        <div>{{ issue_sheet.batchnum6 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty6 }}</div>
                     </div>
                 </div>
             </div>
@@ -116,8 +116,8 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-7'></div>
-                        <div class='centerer widener' id='lot-qty-7'></div>
+                        <div>{{ issue_sheet.batchnum7 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty7 }}</div>
                     </div>
                 </div>
 
@@ -127,8 +127,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-8'></div>
-                        <div class='centerer widener' id='lot-qty-8'></div>
+                        <div>{{ issue_sheet.batchnum8 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty8 }}</div>
                     </div>
                 </div>
                 
@@ -138,12 +138,13 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div id='lot-num-9'></div>
-                        <div class='centerer widener' id='lot-qty-9'></div>
+                        <div>{{ issue_sheet.batchnum9 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty9 }}</div>
                     </div>
                 </div>
             </div>
         </div>
+
     </div>
     <p style="page-break-before: always; color:white;">.</p>
 {% endblock content %}
