--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -24,7 +24,7 @@
             <div class='headercontainer'>
                 <div>PRODUCT: </div>
                 <div class="widener">
-                    <div>&emsp;{{ issue_sheet.component_issue_sheet_code }}&emsp;&emsp;&emsp;&emsp;{{ issue_sheet.component_issue_sheet_description }}</div>
+                    <div>&emsp;{{ issue_sheet.component_issue_sheet_code }}&emsp;&emsp;&emsp;&emsp;{{ issue_sheet.component_item_description }}</div>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum1 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty1 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty1|floatformat:1 }}</div>
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum2 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty2 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty2|floatformat:1 }}</div>
                     </div>
                 </div>
                 
@@ -60,7 +60,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum3 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty3 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty3|floatformat:1 }}</div>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum4 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty4 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty4|floatformat:1 }}</div>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum5 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty5 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty5|floatformat:1 }}</div>
                     </div>
                 </div>
                 
@@ -102,7 +102,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum6 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty6 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty6|floatformat:1 }}</div>
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum7 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty7 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty7|floatformat:1 }}</div>
                     </div>
                 </div>
 
@@ -128,7 +128,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum8 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty8 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty8|floatformat:1 }}</div>
                     </div>
                 </div>
                 
@@ -139,7 +139,7 @@
                     </div>
                     <div>
                         <div>{{ issue_sheet.batchnum9 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty9 }}</div>
+                        <div class='centerer widener'>{{ issue_sheet.batchqty9|floatformat:1 }}</div>
                     </div>
                 </div>
             </div>
