Finishing touches on IssueSheet function.

--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -24,7 +24,7 @@
             <div class='headercontainer'>
                 <div>PRODUCT: </div>
                 <div class="widener">
-                    <div>&emsp;{{ issue_sheet.component_issue_sheet_code }}&emsp;&emsp;&emsp;&emsp;{{ issue_sheet.component_item_description }}</div>
+                    <div>&emsp;{{ issue_sheet.component_item_code }}&emsp;&emsp;&emsp;&emsp;{{ issue_sheet.component_item_description }}</div>
                 </div>
             </div>
         </div>
