Update the issue sheet formatting.

--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -37,7 +37,7 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum1 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum1 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty1|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum2 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum2 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty2|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum3 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum3 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty3|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum4 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum4 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty4|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum5 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum5 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty5|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum6 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum6 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty6|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum7 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum7 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty7|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum8 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum8 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty8|floatformat:1 }}</div>
                     </div>
                 </div>
@@ -138,7 +138,7 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div>{{ issue_sheet.batchnum9 }}</div>
+                        <div class='widener'>{{ issue_sheet.batchnum9 }}</div>
                         <div class='centerer widener'>{{ issue_sheet.batchqty9|floatformat:1 }}</div>
                     </div>
                 </div>
