Resolve issue sheet formatting issues.

--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -37,8 +37,8 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum1 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty1|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum1 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty1|floatformat:1 }}</div>
                     </div>
                 </div>
 
@@ -48,8 +48,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum2 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty2|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum2 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty2|floatformat:1 }}</div>
                     </div>
                 </div>
                 
@@ -59,8 +59,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum3 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty3|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum3 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty3|floatformat:1 }}</div>
                     </div>
                 </div>
             </div>
@@ -79,8 +79,8 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum4 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty4|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum4 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty4|floatformat:1 }}</div>
                     </div>
                 </div>
 
@@ -90,8 +90,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum5 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty5|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum5 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty5|floatformat:1 }}</div>
                     </div>
                 </div>
                 
@@ -101,8 +101,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum6 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty6|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum6 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty6|floatformat:1 }}</div>
                     </div>
                 </div>
             </div>
@@ -116,8 +116,8 @@
                         <div>GAL ISSUED:&nbsp;&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum7 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty7|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum7 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty7|floatformat:1 }}</div>
                     </div>
                 </div>
 
@@ -127,8 +127,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum8 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty8|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum8 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty8|floatformat:1 }}</div>
                     </div>
                 </div>
                 
@@ -138,8 +138,8 @@
                         <div>GAL ISSUED:&nbsp;</div>
                     </div>
                     <div>
-                        <div class='widener'>{{ issue_sheet.batchnum9 }}</div>
-                        <div class='centerer widener'>{{ issue_sheet.batchqty9|floatformat:1 }}</div>
+                        <div class='widener'>&nbsp;{{ issue_sheet.batchnum9 }}</div>
+                        <div class='centerer widener'>&nbsp;{{ issue_sheet.batchqty9|floatformat:1 }}</div>
                     </div>
                 </div>
             </div>
