Update styling to color-code rows based on line.

--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -19,7 +19,7 @@
                 </tr>
             </thead>
             {% for item in desk_one_blends %}
-                <tr>
+                <tr class="{{item.line}}Row">
                     <td>{{ item.item_code }}</td>
                     <td>{{ item.item_description }}</td>
                     <td>{{ item.lot }}</td>
