--- a/app/core/static/core/css/blendSchedule.css
+++ b/app/core/static/core/css/blendSchedule.css
@@ -15,6 +15,18 @@ td {
     border: 2px solid black;
 }
 
+.DmRow {
+    background-color: rgb(255, 195, 167);
+}
+
+.TotesRow { 
+    background-color: rgb(255, 237, 138);
+}
+
+.PailsRow { 
+    background-color: rgb(255, 237, 138);
+}
+
 @media print {
     .site-header {
         display: none !important;
