--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -16,8 +16,9 @@
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
-        <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Blend Count Sheets</a></li>
-        <li><a class="dropdown-item" href="/core/upcoming-component-counts">Component Count Sheets</a></li>
+        <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Make A Blend Count Sheet</a></li>
+        <li><a class="dropdown-item" href="/core/upcoming-component-counts">Make A Component Count Sheet</a></li>
+        <li><a class="dropdown-item" href="/core/count-records/">View All Counts</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
