Enhance display_this_issue_sheet for Hx tab.

--- a/app/core/templates/core/singleissuesheet.html
+++ b/app/core/templates/core/singleissuesheet.html
@@ -10,9 +10,9 @@
         <div class='header'>
             <div class='pagetitle'>BLENDING ISSUE SHEET</div>
             <div class='headercontainer'>
-                <div>DATE: </div>
+                <div>RUN DATE: </div>
                 <div class="widener">
-                    <div class='centerer'>{{ date_today }}</div>
+                    <div class='centerer'>{{ run_date }}</div>
                 </div>
             </div>
             <div class='headercontainer'>
